<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/usuario_texto_nome"
        android:layout_marginTop="10dp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/cadastro_edt_Nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/usuario_edt_nome"
        android:singleLine="true"
        android:maxLength="15"
        android:imeOptions="actionNext"
        />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_lbl_user"
        android:layout_marginTop="10dp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/cadastro_edt_Login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_edt_user_hint"
        android:singleLine="true"
        android:maxLength="15"
        android:imeOptions="actionNext"
        />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/usuario_texto_email"
            android:layout_marginTop="10dp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/cadastro_edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/usuario_edt_email"
            android:singleLine="true"
            android:imeOptions="actionNext"
            />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_lbl_password"
        android:layout_marginTop="10dp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/cadastro_edt_Senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/login_edt_password_hint"
        android:singleLine="true"
        android:maxLength="15"
        android:imeOptions="actionDone"/>

    <Button
        android:id="@+id/cadastro_btn_cadastrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_btn_cadastro_value"
        android:layout_marginTop="@dimen/login_btn_cadastro_marginTop"
        android:onClick="Cadastrar"/>


    </LinearLayout>
</ScrollView>
