<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center_vertical"
    tools:context=".LoginActivity"
    android:weightSum="1"
    android:id="@+id/TelaLogin">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logoo"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/login_logo_marginBottom"
        android:contentDescription="@string/img_content_description" />

    <TextView
        android:text="@string/login_lbl_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/login_edt_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_edt_user_hint"
        android:singleLine="true"
        android:maxLength="15"
        android:imeOptions="actionNext" />

    <TextView
        android:text="@string/login_lbl_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/login_edt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_edt_password_hint"
        android:singleLine="true"
        android:maxLength="15"
        android:inputType="textPassword"
        android:imeOptions="actionDone" />

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_checkbox_conectado"
        android:text="@string/login_checkbox_conectado"
        android:checked="false" />

    <Button
        android:id="@+id/login_btn_enter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_btn_enter_value"
        android:layout_marginTop="@dimen/login_btn_enter_marginTop"
        android:onClick="logar" />


    <Button
        android:id="@+id/login_btn_cadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_btn_cadastro_value"
        android:layout_marginTop="@dimen/login_btn_cadastro_marginTop"
        android:onClick="abrirCadastro"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btRevokeAcess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/maps_btn_revogar"
            android:layout_marginTop="@dimen/login_revogar_marginTop"
            android:onClick="revokeAccess" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/btSignInDefault"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_google_plus_marginTop"
            android:layout_weight="1" />

    </LinearLayout>


</LinearLayout>