<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="gui.MapsActivity">

    <item android:id="@+id/search_b"
        android:title="@string/search"
        android:showAsAction="always"
        android:actionViewClass="android.widget.SearchView"/>

    <item android:id="@+id/action_fale_Conosco"
        android:title="@string/fale_conosco"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_logout"
        android:title="@string/logout"
        android:orderInCategory="101"
        app:showAsAction="never" />

    <item android:id="@+id/action_fechar"
        android:title="@string/fechar"
        android:orderInCategory="102"
        app:showAsAction="never" />
</menu>
